{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "3c3b5253-4c07-445a-866b-b60303a4ab4e",
            "actions": [
                {
                    "name": "Spawn1",
                    "type": "Value",
                    "id": "cd4bb42f-3646-4f5b-8e55-d170d8df5660",
                    "expectedControlType": "Key",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Spawn2",
                    "type": "Button",
                    "id": "2b419399-47d5-43c5-82e7-bd050552017f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Spawn3",
                    "type": "Button",
                    "id": "eb0a35d0-4aa3-4a6f-b834-d012914a6ca3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "54dfaab1-548e-4644-b9be-4b8165592fda",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spawn1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "673ff533-5824-4f96-9c27-9afe35551e68",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spawn2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "856d9f0f-2a88-44a0-92fa-e93e52456b55",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spawn3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}